# Medusa

./: .gitignore  CITATION.cff  README.md  ROADMAP.md  create_data.py  deepspeed.json  pyproject.toml  simple_gradio_interface.py
assets/: medusa_acc.csv
data_generation/: README.md  convert_to_sharegpt.py  generate.py
llm_judge/: README.md  gen_judgement.py  gen_model_answer_baseline.py  gen_model_answer_baseline_inf_only.py  gen_model_answer_huggingface.py  gen_model_answer_medusa.py  gen_model_answer_medusa_inf_only.py  gen_model_answer_medusa_legacy.py  show_result.py
llm_judge/data/mt_bench/model_answer/: medusa-vicuna-13b-v1.3-1-temperature-0.0-posterior_threshold-0.09-posterior_alpha-0.3.jsonl  medusa-vicuna-13b-v1.3-2-temperature-0.0-posterior_threshold-0.09-posterior_alpha-0.3.jsonl  medusa-vicuna-13b-v1.3-temperature-0.0-posterior_threshold-0.09-posterior_alpha-0.3.jsonl  (+6 more)
medusa/: hf_utils.py
medusa/eval/: README.md  gen_results.py  heads_accuracy.py
medusa/inference/: api_client.py  api_server.py  cli.py  inference_test.py  origin_inference.py
medusa/model/: kv_cache.py  medusa_choices.py  medusa_model.py  medusa_model_legacy.py  medusa_model_new.py  modeling_llama_kv.py  modeling_llama_kv_434.py  modeling_llama_kv_legacy.py  modeling_mistral.py  modeling_mistral_kv.py  origin_model.py  utils.py  utils_legacy.py
medusa/train/: train.py  train_legacy.py
notebooks/: medusa_configuration_explained.ipynb  medusa_inference_explained.ipynb  medusa_introduction.ipynb
scripts/: train_vicuna_33b_8bit.sh  train_vicuna_7b.sh
(+1 files in other folders)
